# AIClipCreator

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TEMPLATECLIP.drp  aiclipcreator.db  aiclipcreator.db-journal  autorun.bat  autorun_v2.bat  catchthis  clips.json  create-vm.bat  find_out.py  fix_mpeg.bat  install.sh  main.py  pyproject.toml  reddit_ai.py  reddit_br.py  reddit_com.py  reddit_post.py  rerun.py  running_videos.json  sch_run.bat  sch_run_v2.bat  scheduled_post.py  scheduled_post_v2.py  test.py  videoids_try
clip_creator/: ai.py  conf.py  vbox.py  video_edit.py  youtube.py
clip_creator/adb/: dump.py  greentext_slideshow.py  not_bort.py  tiktok_auto.py  youtube_reupload.py
clip_creator/adb/api/: reddit.py  uploader.py
clip_creator/db/: db.py
clip_creator/lang/: translate.py
clip_creator/models/: comments.py
clip_creator/not_bot/: tiktok.py
clip_creator/social/: config.toml  custom_tiktok.py  google_login.py  insta.py  reddit.py  tiktok.py
clip_creator/tests/: __init__.py  test__init__.py  test_ai.py  test_db.py  test_red_vid_edit.py  test_reddit_post.py  test_tts.py  test_video_edit.py
clip_creator/tests/social/: test_reddit.py
clip_creator/tests/utils/: test_scan_text.py  text_to_video.py
clip_creator/tts/: ai.py  audio_edit.py
clip_creator/utils/: OffensiveWords-comma-separated-text.txt  banned.txt  caption_img.py  files.py  forcealign.py  math_things.py  path_setup.py  real_reddit.html  real_reddit_com.html  real_reddit_comrpl.html  renamable.txt  scan_text.py  schedules.py  text_to_video.py  tmp_replace.css  video_tools.py
clip_creator/vid_ed/: red_vid_edit.py  video_edit.py
config/: clipcityai@gmail.com.checkpoint  clipcityai@gmail.com_uuid_and_cookie.json  secret.txt
script/: android.sh  install.sh  scheduled_post.bat  scroll_tt_b4.bat  test.bat
test_files/: find_out.py  reddit.json  rerun.py  video_ids.txt  yt_script_t7crKS9DWaI.txt
