[tool.poetry]
name = "clip-creator"
version = "0.1.0"
description = ""
authors = ["Jonathan Stoff <jonathanlstoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
google-api-python-client = "^2.160.0"
youtube-transcript-api = "^0.6.3"
isodate = "^0.7.2"
ollama = "^0.4.7"
moviepy = "^2.1.2"
opencv-python = "^4.11.0.86"
requests = "^2.31.0"
tiktokapi = "^7.0.0"
selenium = "^4.28.1"
tiktok-uploader = "^1.0.16"
pytube2 = "^15.0.12"
y2mate-api = "^1.2.3"
yt-dlp = "^2025.1.26"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
