[tool.poetry]
name = "clip-creator"
version = "0.1.0"
description = ""
authors = ["Jonathan Stoff <jonathanlstoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
google-api-python-client = "^2.160.0"
youtube-transcript-api = "^0.6.3"
isodate = "^0.7.2"
ollama = "^0.4.7"
moviepy = "^2.1.2"
opencv-python = "^4.11.0.86"
requests = "^2.31.0"
tiktokapi = "^7.0.0"
selenium = "^4.28.1"
tiktok-uploader = "^1.0.16"
pytube2 = "^15.0.12"
yt-dlp = "^2025.1.26"
bs4 = "^0.0.2"
librosa = "^0.10.2.post1"
pandas = "^2.2.3"
transformers = "4.48.0.dev0 || 4.48.0"
nltk = "^3.9.1"
ctranslate2 = "^4.5.0"
faster-whisper = "^1.1.1"
pyannote-audio = "^3.3.2"
datasets = "^3.3.1"
accelerate = "^1.4.0"
instabot = "^0.117.0"
pydub = "^0.25.1"
pilmoji-fixed = "*"
emoji = "1.6.3"
noisereduce = "^3.0.3"
pilmoji = "^2.0.4"
speechbrain = "^1.0.2"
forcealign = "*"
kokoro = "^0.8.4"
ipython = "^9.0.0"
torch = "2.4.1 || 2.6.0+cu118"
torchaudio = "2.6.0"
imgkit = "^1.2.3"
num2words = "^0.5.14"
googletrans = "^4.0.2"
uiautomator = "^1.0.2"
uiautomator2 = "^3.2.8"
orjson = "^3.10.16"
urlextract = "^1.9.0"
trl = "^0.16.0"
peft = "^0.15.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
